--- a/shop_bd/pubspec.yaml
+++ b/shop_bd/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   intl: ^0.19.0
-  url_launcher: ^6.3.1
   get: ^4.6.6
   get_storage: ^2.1.1
+  flutter_native_splash: ^2.4.2
 
 dev_dependencies:
   flutter_test:
